--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -112,7 +112,9 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #159957;
+  text-decoration: underline;
+}
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
